fix scrollbars

--- a/src/modules/emote_menu/components/EmoteList.module.css
+++ b/src/modules/emote_menu/components/EmoteList.module.css
@@ -1,5 +1,16 @@
+.emoteListRoot {
+  display: flex;
+  flex-direction: column;
+}
+
+.listViewport {
+  flex: 1;
+  min-height: 0;
+  min-width: 0;
+}
+
 .emotesContainer {
-  composes: scroll from '../styles/Scrollbar.module.css';
+  flex: 1;
   width: 100%;
   overflow-x: hidden;
 }
