--- a/src/modules/emote_menu/components/VirtualizedList.module.css
+++ b/src/modules/emote_menu/components/VirtualizedList.module.css
@@ -12,12 +12,6 @@
   visibility: hidden;
 }
 
-.stickyBottomComponent {
-  position: sticky;
-  bottom: 0;
-  z-index: 2;
-}
-
 .guard {
   width: 100%;
 }
