--- a/src/modules/settings/components/SettingsModal.module.css
+++ b/src/modules/settings/components/SettingsModal.module.css
@@ -19,7 +19,7 @@
 .pageContent {
   position: relative;
   flex: 1;
-  overflow: scroll;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   background-color: var(--mantine-color-body-secondary);
